# HydroponicsSystem

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt
.docker/: Dockerfile  docker-compose.yml
.github/workflows/: hst-ci.yml
auth_app/: factories.py  urls.py  views.py
auth_app/tests/: test_factories.py  test_serializers.py  test_urls.py  test_views.py
core/: .env.dist  settings.py  urls.py
measurements/: factories.py  filters.py  models.py  serializers.py  urls.py  views.py
measurements/api/v1/: urls.py
measurements/migrations/: 0001_initial.py
measurements/tests/: test_factories.py  test_serializers.py  test_urls.py  test_views.py
systems/: factories.py  filters.py  models.py  serializers.py  urls.py  views.py
systems/api/v1/: urls.py  views.py
systems/migrations/: 0001_initial.py  0002_hydroponicssystem_created_at_and_more.py
systems/tests/: test_factories.py  test_serializers.py  test_urls.py  test_views.py
users/: apps.py  serializers.py  urls.py  views.py
users/tests/: test_serializers.py  test_urls.py
